labs/mq-sink-lab/container/Route-mq.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mq-route
  namespace: mq-demo
spec:
  host: ibmmq.mq-demo.apps.openshift.proxmox.lab
  to:
    kind: Service
    name: mq-service
    weight: 100
  port:
    targetPort: mq-portal
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
